added images and links to projects

--- a/index.html
+++ b/index.html
@@ -112,31 +112,31 @@
 							<article class="box style2">
 								<a href="https://inspired1.herokuapp.com/" class="image featured"><img src="images/InspiredSplashPage.png" alt="" /></a>
 								<h3><a href="https://inspired1.herokuapp.com/">Inspired</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<p>Whether you're overcoming obstacles in life, need an extra push to get stuff done, or enjoy sharing postive quotes with your friends, Inspired is here to help! Inspired is an app where users can swipe to like or dislike daily quotes and create collections to store their favorite quotes.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://remember-the-whey.herokuapp.com/" class="image featured"><img src="images/rememberTheWheySplash.png" alt="" /></a>
+								<h3><a href="https://remember-the-whey.herokuapp.com/">RememberTheWhey</a></h3>
+								<p>RememberTheWhey is a clone of RememberTheMilk.com with a focus on health and fitness. It enables a user to categorize and keep track of workouts by creating customizable lists. The user is also given the ability to customize each excercise or task on their custom list, while also having easy access to a summary of the list or task info.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://accordapp.herokuapp.com/" class="image featured"><img src="images/accordSplashPage.png" alt="" /></a>
+								<h3><a href="https://accordapp.herokuapp.com/">Accord</a></h3>
+								<p>A clone of discord.com where users are able to join servers and chat in channels.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://jsoverflow.herokuapp.com/" class="image featured"><img src="images/JSOverflowSplash.png" alt="" /></a>
+								<h3><a href="https://jsoverflow.herokuapp.com/">JS OverFlow</a></h3>
+								<p>A clone of stackoverflow.com with a focus on the topics of JavaScript. Users are able to post Q&A's and keep track of it in their profile page.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 								<h3><a href="#">Feugiat aliquam</a></h3>
@@ -149,10 +149,10 @@
 								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
-						</div>
+						</div> -->
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<!-- <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p> -->
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
