added meta tags in Header to load splash page of portfolio on LinkedIn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 		<title>Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="title" property="og:title" content="portfolio">
+		<meta property="og:type" content="website">
+		<meta name="image" property="og:image" content="https://user-images.githubusercontent.com/76798385/160956767-3ea93638-c158-4874-9c28-78c3a282bad2.png">
+		<meta name="description" property="og:description" content="Welcome to my portfolio! Here are a list of projects I have accomplish thus far!">
+		<meta name="author" content="Hector Crespo">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
