--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
 								<p>Whether you're overcoming obstacles in life, need an extra push to get stuff done, or enjoy sharing postive quotes with your friends, Inspired is here to help! Inspired is an app where users can swipe to like or dislike daily quotes and create collections to store their favorite quotes.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://remember-the-whey.herokuapp.com/" class="image featured"><img src="images/rememberTheWheySplash.png" alt="" /></a>
 								<h3><a href="https://remember-the-whey.herokuapp.com/">RememberTheWhey</a></h3>
 								<p>RememberTheWhey is a clone of RememberTheMilk.com with a focus on health and fitness. It enables a user to categorize and keep track of workouts by creating customizable lists. The user is also given the ability to customize each excercise or task on their custom list, while also having easy access to a summary of the list or task info.</p>
 							</article>
-						</div>
+						</div> -->
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://accordapp.herokuapp.com/" class="image featured"><img src="images/accordSplashPage.png" alt="" /></a>
