changed url to the portfolio projects

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://inspired1.herokuapp.com/" class="image featured"><img src="images/InspiredSplashPage.png" alt="" /></a>
-								<h3><a href="https://inspired1.herokuapp.com/">Inspired</a></h3>
+								<a href="https://inspired-wq6h.onrender.com/" class="image featured"><img src="images/InspiredSplashPage.png" alt="" /></a>
+								<h3><a href="https://inspired-wq6h.onrender.com/">Inspired</a></h3>
 								<p>Whether you're overcoming obstacles in life, need an extra push to get stuff done, or enjoy sharing postive quotes with your friends, Inspired is here to help! Inspired is an app where users can swipe to like or dislike daily quotes and create collections to store their favorite quotes.</p>
 							</article>
 						</div>
@@ -127,7 +127,7 @@
 								<p>RememberTheWhey is a clone of RememberTheMilk.com with a focus on health and fitness. It enables a user to categorize and keep track of workouts by creating customizable lists. The user is also given the ability to customize each excercise or task on their custom list, while also having easy access to a summary of the list or task info.</p>
 							</article>
 						</div> -->
-						<div class="col-4 col-6-medium col-12-small">
+						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://accordapp.herokuapp.com/" class="image featured"><img src="images/accordSplashPage.png" alt="" /></a>
 								<h3><a href="https://accordapp.herokuapp.com/">Accord</a></h3>
@@ -140,7 +140,7 @@
 								<h3><a href="https://jsoverflow.herokuapp.com/">JS OverFlow</a></h3>
 								<p>A clone of stackoverflow.com with a focus on the topics of JavaScript. Users are able to post Q&A's and keep track of it in their profile page.</p>
 							</article>
-						</div>
+						</div> -->
 						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
