added js overflow project back

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 								<h3><a href="https://accordapp.herokuapp.com/">Accord</a></h3>
 								<p>A clone of discord.com where users are able to join servers and chat in channels.</p>
 							</article>
-						</div>
+						</div> -->
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://jsoverflow.herokuapp.com/" class="image featured"><img src="images/JSOverflowSplash.png" alt="" /></a>
-								<h3><a href="https://jsoverflow.herokuapp.com/">JS OverFlow</a></h3>
+								<a href="https://js-overflow.onrender.com/" target="_blank" class="image featured"><img src="images/JSOverflowSplash.png" alt="" /></a>
+								<h3><a href="https://js-overflow.onrender.com/" target="_blank">JS OverFlow</a></h3>
 								<p>A clone of stackoverflow.com with a focus on the topics of JavaScript. Users are able to post Q&A's and keep track of it in their profile page.</p>
 							</article>
-						</div> -->
+						</div>
 						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
