changed inspired URL

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://inspired-wq6h.onrender.com/" target="_blank" class="image featured"><img src="images/InspiredSplashPage.png" alt="" /></a>
-								<h3><a href="https://inspired-wq6h.onrender.com/" target="_blank">Inspired</a></h3>
+								<a href="https://inspired-goc1.onrender.com" target="_blank" class="image featured"><img src="images/InspiredSplashPage.png" alt="" /></a>
+								<h3><a href="https://inspired-goc1.onrender.com" target="_blank">Inspired</a></h3>
 								<p>Whether you're overcoming obstacles in life, need an extra push to get stuff done, or enjoy sharing postive quotes with your friends, Inspired is here to help! Inspired is an app where users can swipe to like or dislike daily quotes and create collections to store their favorite quotes.</p>
 							</article>
 						</div>
