changed about me section.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 							<header>
 								<h1>Hi. I'm <strong>Hector Crespo</strong>.</h1>
 							</header>
-							<p>I love the result of building full stack web applications from the ground-up. I am a problem-solver and enjoy debugging errors and figuring out solutions. I'm an enthusiastic teammate and have a passion for learning new technologies. I have experience building dynamic web applications in JavaScript, Python, React, Flask, Express.js, Node.js, and PostgreSQL. When I am not coding, I take delight in eating delicious food, listening to podcasts, and excercising.</p>
+							<p>I love the result of building full stack web applications from the ground-up. I am a problem-solver and enjoy debugging errors and figuring out solutions. I'm an enthusiastic teammate and have a passion for learning new technologies.
+								I have experience building dynamic web applications in HTML5, CSS3, JavaScript, React.js, Python, Node.js, Express.js, Flask, SQLAlchemy, Alembic, Sequelize, PostgreSQL, SQLite3 and Playwright.</p>
 							<!-- <p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p> -->
 							<!-- <a href="#work" class="button large scrolly">Learn about what I do</a> -->
 						</div>
