added 2 more project links under the projects section.

--- a/index.html
+++ b/index.html
@@ -88,9 +88,12 @@
         <div class="mb-5">
           <h4>Favorite Lo-Fi Playlist while coding</h4>
           <ol>
-            <li>Nujabes - <a href="https://youtu.be/m4fDm4rdUdk?si=6kZ9Vcxg5GjfhFjB" target="_blank">Nujabes Playlist</a></li>
-            <li>LAKEY INSPIRED - <a href="https://youtu.be/daEB_50JyLM?si=RkKJYbTvr9Z7z-N5" target="_blank">LAKEY INSPIRED I Mixtape I Ambient, Chillhop, Lofi</a></li>
-            <li>L'indécis - <a href="https://youtu.be/_NNNgXoOdnA?si=MOaYkvVXPAeuK1q6" target="_blank">Playtime</a></li>
+            <li>Nujabes - <a href="https://youtu.be/m4fDm4rdUdk?si=6kZ9Vcxg5GjfhFjB" target="_blank">Nujabes
+                Playlist</a></li>
+            <li>LAKEY INSPIRED - <a href="https://youtu.be/daEB_50JyLM?si=RkKJYbTvr9Z7z-N5" target="_blank">LAKEY
+                INSPIRED I Mixtape I Ambient, Chillhop, Lofi</a></li>
+            <li>L'indécis - <a href="https://youtu.be/_NNNgXoOdnA?si=MOaYkvVXPAeuK1q6" target="_blank">Playtime</a>
+            </li>
           </ol>
         </div>
 
@@ -380,6 +383,15 @@
       <ul class="list-inline">
 
         <li class="list-inline-item">
+          <a href="https://accord-0p9a.onrender.com/login" class="project-image" target="_blank">
+            <img src="./img/accord-screenshot.png" alt="JS Overflow Project Image">
+          </a>
+          <h3><a href="https://accord-0p9a.onrender.com/login" target="_blank">Accord</a></h3>
+          <p>A clone of Discord where users can join and create servers to chat with members!
+          </p>
+        </li>
+
+        <li class="list-inline-item">
           <a href="https://inspired-goc1.onrender.com/" class="project-image" target="_blank">
             <img src="./img/InspiredSplashPage.png" alt="Inspired Project Image">
           </a>
@@ -392,13 +404,21 @@
         </li>
 
         <li class="list-inline-item">
+          <a href="https://remember-the-whey.onrender.com/users/log-in" class="project-image" target="_blank">
+            <img src="./img/rememberthewhey-screenshot.png" alt="JS Overflow Project Image">
+          </a>
+          <h3><a href="https://remember-the-whey.onrender.com/users/log-in" target="_blank">RememberTheWhey</a></h3>
+          <p>A clone of RememberTheMilk.com where users can create lists and tasks to keep track of their workouts.
+          </p>
+        </li>
+
+        <li class="list-inline-item">
           <a href="https://js-overflow.onrender.com/" class="project-image" target="_blank">
             <img src="./img/Jsoverflowsplashpage.png" alt="JS Overflow Project Image">
           </a>
           <h3><a href="https://js-overflow.onrender.com/" target="_blank">JS Overflow</a></h3>
           <p>A clone of stackoverflow.com with a focus on the topics of JavaScript.
             Users are able to post Q&A's and keep track of it in their profile page.
-          </p>
           </p>
         </li>
 
@@ -411,7 +431,8 @@
       <h2 class="mb-5">Contact</h2>
       <h4 class="mb-3">Let's Connect and Create Something Awesome Together!</h4>
       <p>
-        Whether you have a project in mind, want to collaborate, or just want to share with me your favorite Lo-Fi playlist, I'd love to hear from you.
+        Whether you have a project in mind, want to collaborate, or just want to share with me your favorite Lo-Fi
+        playlist, I'd love to hear from you.
         Drop me a message and let's start a conversation! Looking forward to connecting with you!
       </p>
       <div>
