revised about me and contact section.

--- a/index.html
+++ b/index.html
@@ -78,23 +78,21 @@
             resume</a>
         </div>
         <h4>About me</h4>
-        <p class="mb-4">I love the result of building full stack web applications from the ground-up.
-          I am a problem-solver and enjoy debugging errors and figuring out solutions.
-          I'm an enthusiastic teammate and have a passion for learning new technologies.
-          I have experience building dynamic web applications in HTML5, CSS3, JavaScript, React.js,
-          Python, Node.js, Express.js, Flask, SQLAlchemy, Alembic, Sequelize,
-          PostgreSQL, SQLite3 and Playwright.</p>
+        <p class="mb-4">An aspiring software engineer driven by curiosity for coding and problem solving with a passion for anime, gaming and NBA basketball. </p>
+
+        <p>I have experience in teaching various programming topics that includes JavaScript, Python, OOP, SQL, HTML, and CSS as a Module Instructor. I've managed to oversee the successful completion of 150+ student full-stack capstone projects. Through collaborative efforts across departments, I've refined curriculum modules with additional resources in system design, debugging tools, and project management best practices, ensuring a robust learning environment.</p>
+
+        <p>I am eager to further develop my expertise in software engineering, leveraging my creativity and collaborative spirit to drive innovative solutions for companies.
+
+          I enjoy connecting with people to exchange perspectives on programming, new technologies, anime, gaming, or basketball. Looking forward to connecting and exploring new ideas together!</p>
 
         <div class="mb-5">
-          <h4>Favorite Lo-Fi Playlist while coding</h4>
-          <ol>
-            <li>Nujabes - <a href="https://youtu.be/m4fDm4rdUdk?si=6kZ9Vcxg5GjfhFjB" target="_blank">Nujabes
-                Playlist</a></li>
-            <li>LAKEY INSPIRED - <a href="https://youtu.be/daEB_50JyLM?si=RkKJYbTvr9Z7z-N5" target="_blank">LAKEY
-                INSPIRED I Mixtape I Ambient, Chillhop, Lofi</a></li>
-            <li>L'indécis - <a href="https://youtu.be/_NNNgXoOdnA?si=MOaYkvVXPAeuK1q6" target="_blank">Playtime</a>
-            </li>
-          </ol>
+          <h4>Fun Facts</h4>
+          <ul>
+            <li>Favorite Animes: Jujutsu Kaisen, Naruto, Attack on Titan</li>
+            <li>Current game I'm interested in: League of Legends</li>
+            <li>Favorite NBA Team: Nets</li>
+          </ul>
         </div>
 
         <ul class="list-inline list-social-icons mb-0">
@@ -431,8 +429,9 @@
       <h2 class="mb-5">Contact</h2>
       <h4 class="mb-3">Let's Connect and Create Something Awesome Together!</h4>
       <p>
-        Whether you have a project in mind, want to collaborate, or just want to share with me your favorite Lo-Fi
-        playlist, I'd love to hear from you.
+        I enjoy connecting with people to exchange perspectives on programming, new technologies, anime, gaming, or basketball.
+      </p>
+      <p>
         Drop me a message and let's start a conversation! Looking forward to connecting with you!
       </p>
       <div>
