--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h4>About me</h4>
         <p class="mb-4">An aspiring software engineer driven by curiosity for coding and problem solving with a passion for anime, gaming and NBA basketball. </p>
 
-        <p>I have experience in teaching various programming topics that includes JavaScript, Python, OOP, SQL, HTML, and CSS as a Module Instructor. I've managed to oversee the successful completion of 150+ student full-stack capstone projects. Through collaborative efforts across departments, I've refined curriculum modules with additional resources in system design, debugging tools, and project management best practices, ensuring a robust learning environment.</p>
+        <p>I have experience in teaching various programming topics that includes JavaScript, Python, React.js, OOP, SQL, HTML, and CSS as a Module Instructor. I've managed to oversee the successful completion of 150+ student full-stack capstone projects providing mentorship and project management. Managed and guided a team of 4 instructional assistants, optimizing workflows, resolving challenges, and achieving company goals through data-driven strategies, effective communication, and talent development. Provided technical expertise in leveraging AWS for image storage, and instructed on efficient deployment strategies using Render as a reliable web hosting service, ensuring scalability for the application.</p>
 
         <p>I am eager to further develop my expertise in software engineering, leveraging my creativity and collaborative spirit to drive innovative solutions for companies.
 
@@ -149,14 +149,13 @@
                 Express.js and Sequelize.js.
               </li>
               <li class="resume-bullet">
-                Managed and guided a team of junior instructional assistants, optimizing workflows, resolving
-                challenges, and achieving
-                company goals through strategic planning, effective communication, and talent development.
+                Managed and guided a team of 4 instructional assistants, optimizing workflows, resolving challenges, and achieving company goals through data-driven strategies, effective communication, and talent development.
               </li>
               <li class="resume-bullet">
-                Engaged in cross-departmental collaboration to enhance and polish the Module curriculum, fostering a
-                collaborative
-                approach to curriculum development.
+                Provided technical expertise in leveraging AWS for image storage, and instructed on efficient deployment strategies using Render as a reliable web hosting service, ensuring scalability for the application.
+              </li>
+              <li class="resume-bullet">
+                Guided students in establishing a robust CI/CD pipeline using GitHub and Render services, streamlining release cycles and accelerating delivery of updates to end consumers.
               </li>
             </ul>
           </div>
@@ -171,19 +170,50 @@
             <div class="subheading mb-3">App Academy</div>
             <ul>
               <li class="resume-bullet">
-                Developed and refined curriculum modules essential for the education of aspiring Full Stack Engineers.
-                Topics Included
-                JavaScript, CSS, HTML, OOP, Python, React, Redux, Express, and SQL relational database management.
+                Developed and refined curriculum modules which included JavaScript, CSS, HTML, OOP, Python, React, Redux, Express, and SQL relational database management for aspiring Full Stack Engineers elevating student success rates.
               </li>
               <li class="resume-bullet">
-                Cultivated an engaging and motivating learning environment, resulting in elevated student success rates
-                and consistent
-                positive feedback.
+                Collaborated across departments to polish the Module curriculum with supplemental resources, including system design content, cloud technologies, debugging tools, and networking, ensuring a robust learning environment.
+              </li>
+              <li class="resume-bullet">
+                Reviewed and provided debugging solutions for pull requests using tools such as Chrome DevTools, effectively reducing errors and optimizing code quality.
               </li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Aug 2021 - July 2022</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Peer Mentor</h3>
+            <div class="subheading mb-3">New Jersey City University</div>
+            <ul>
+              <li class="resume-bullet">
+                Oversaw 20-30 first year students by providing them with resources, encouragement, and guidance.</li>
+              <li class="resume-bullet">
+                Assisted first year freshmen in making a smooth transition from high school to the college environment and increasing their chances for retention.</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Aug 2017 - Mar 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Orientation Team Leader</h3>
+            <div class="subheading mb-3">New Jersey City University</div>
+            <ul>
+              <li class="resume-bullet">
+                Facilitated a team of over 5 members to ensure any given tasks were done properly.</li>
+              <li class="resume-bullet">
+                Designed and led interactive workshops for 30+ students, incorporating engaging activities to explore and discuss career goals effectively.</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">May 2019 - Aug 2019</span>
           </div>
         </div>
 
