updated portfolio nov 11, 2024.

--- a/index.html
+++ b/index.html
@@ -78,21 +78,24 @@
             resume</a>
         </div>
         <h4>About me</h4>
-        <p class="mb-4">An aspiring software engineer driven by curiosity for coding and problem solving with a passion for anime, gaming and NBA basketball. </p>
 
-        <p>I have experience in teaching various programming topics that includes JavaScript, Python, React.js, OOP, SQL, HTML, and CSS as a Module Instructor. I've managed to oversee the successful completion of 150+ student full-stack capstone projects providing mentorship and project management. Managed and guided a team of 4 instructional assistants, optimizing workflows, resolving challenges, and achieving company goals through data-driven strategies, effective communication, and talent development. Provided technical expertise in leveraging AWS for image storage, and instructed on efficient deployment strategies using Render as a reliable web hosting service, ensuring scalability for the application.</p>
-
+        <p>I am a software engineer with extensive experience in building high quality web applications.</p>
+        <p>I have experience in teaching various programming topics that includes JavaScript, Python, React.js, OOP, SQL, HTML, and CSS as a Module Instructor. I've managed to oversee the successful completion of 150+ student full-stack capstone projects providing mentorship and project management. Managed and guided a team of 4 instructional assistants, optimizing workflows, resolving challenges, and achieving company goals through data-driven strategies, effective communication, and talent development.</p>
         <p>I am eager to further develop my expertise in software engineering, leveraging my creativity and collaborative spirit to drive innovative solutions for companies.
+        <p>I enjoy connecting with people to exchange perspectives on programming, new technologies, anime, gaming, or basketball. Looking forward to connecting and exploring new ideas together!</p>
 
-          I enjoy connecting with people to exchange perspectives on programming, new technologies, anime, gaming, or basketball. Looking forward to connecting and exploring new ideas together!</p>
+        <h4>Skills and Technologies</h4>
+        <p></p>Languages: JavaScript, Python, HTML/CSS, SQL</p>
+        <p>Frameworks/Libraries: React.js, Redux, Express.js, Flask</p>
+        <p>Databases: PostgreSQL, SQLite</p>
 
         <div class="mb-5">
-          <h4>Fun Facts</h4>
+          <!-- <h4>Fun Facts</h4>
           <ul>
             <li>Favorite Animes: Jujutsu Kaisen, Naruto, Attack on Titan</li>
             <li>Current game I'm interested in: League of Legends</li>
             <li>Favorite NBA Team: Nets</li>
-          </ul>
+          </ul> -->
         </div>
 
         <ul class="list-inline list-social-icons mb-0">
@@ -467,7 +470,7 @@
       <div>
         <a href="https://www.linkedin.com/in/hector-crespo-b0b5b019a/" target="_blank">
           <i class="fa fa-linkedin-square"></i> connect on linkedin</a>
-        <a href="https://drive.google.com/file/d/1UqYmvzib_HU-vOR9jbGRq3VD98wr1Pgo/view?usp=sharing" target="_blank">My
+        <a href="https://drive.google.com/file/d/1Mv3Lr_3pGKDh02Mi9iB8HINndv6SW-lU/view?usp=sharing" target="_blank">My
           resume</a>
       </div>
     </div>
